<resources>
    <string name="app_name">Art of Technology</string>
    <string name="default_web_client_id">727703555521-c25h83lkuclki012sf4ccsvl7mgqcgjm.apps.googleusercontent.com</string>

    <string name="logo">logo</string>
    <string name="cancel">cancel</string>
    <string name="facebook">facebook</string>
    <string name="gmail">gmail</string>
    <string name="regresar">Regresar</string>
    <string name="str_buscar">Buscar …</string>
    <string name="str_add">REGISTRAR TRABAJADOR</string>
    <string name="str_edit_work">MODIFICAR TRABAJADOR</string>

    <string name="str_add_client">REGISTRAR CLIENTE</string>
    <string name="str_edit_client">REGISTRAR CLIENTE</string>
    <string name="str_clientess">GESTION DE CLIENTES</string>
    <string name="str_google">Inicia sesión con google</string>

    <string name="title_login">Iniciar Sesión</string>
    <string name="input_email">Correo electrónico</string>
    <string name="input_pass">Contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="str_reset">¿Olvidaste la contraseña?</string>
    <string name="str_or">Or</string>
    <string name="str_create">Crear cuenta</string>

    <string name="title_menu_admin">Menú principal</string>
    <string name="str_welcome">Bienvenido</string>
    <string name="str_user">Trabajadores</string>
    <string name="str_product">Productos</string>
    <string name="str_client">Clientes</string>
    <string name="str_sale">Ventas</string>
    <string name="str_account">Cuenta</string>
    <string name="str_session">Cerrar Sesión</string>

    <string name="input_username">Nombre de usuario</string>
    <string name="input_confirm">Confirmar contraseña</string>
    <string name="btn_account">Registrar</string>
    <string name="btn_session">¿Ya tienes una cuenta?</string>

    <string name="title_usuarios">GESTIÓN DE TRABAJORES</string>

    <string name="title_product">GESTIÓN DE PRODUCTOS</string>

    <string name="title_forgot">RESTABLECER CONTRASEÑA</string>
    <string name="str_recomendacion">*Al restablecer contraseña le llegara un mensaje al correo electrónico*</string>
    <string name="str_forgot">RESTABLECER</string>
    <string name="str_cancel">Cancelar</string>

    <string name="title_perfil">DATOS DEL USUARIO</string>
    <string name="title2_perfil">Mis datos personales</string>
    <string name="str_correo">Correo</string>
    <string name="title_forgot2">Restablecer Contraseña</string>

    <string name="title_menu_client">Bienvenido a</string>
    <string name="title_menu_client2">ART OF TECHNOLOGY</string>
    <string name="str_opcion">Elija una opción</string>
    <string name="str_escanear">Escanear</string>
    <string name="str_products">Ver productos</string>

    <string name="title_trabajador">Registrar trabajador</string>
    <string name="str_dni">DNI</string>
    <string name="str_name">Nombres</string>
    <string name="str_last">Apellidos</string>
    <string name="str_tel">Teléfono</string>
    <string name="str_consultar">CONSULTAR</string>

    <string name="title_edit_trabajador">Modificar datos</string>
    <string name="str_estado">Estado</string>
    <string name="str_edit">MODIFICAR</string>
</resources>