<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.resetPassword.ForgotPasswordActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/titleForgot"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/title_forgot"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/title_forgot"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtEmailForgot"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_email"
        android:textColorHint="@color/black_light"
        android:elevation="10dp"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/green_light"
        app:boxStrokeErrorColor="@color/red"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:startIconDrawable="@drawable/icon_email"
        app:startIconTint="@color/black_light">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInputEmailForgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHighlight="@color/green_light"
            android:textColorHint="@color/grey"
            android:textColorLink="@color/green_light" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/str_recomendacion"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="13sp"
        android:fontFamily="sans-serif-smallcaps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/btnForgot"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green_light"
        android:elevation="10dp"
        android:padding="10dp"
        android:text="@string/str_forgot"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-smallcaps"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <TextView
        android:id="@+id/txtCancel"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/str_cancel"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="20sp"
        android:fontFamily="sans-serif-smallcaps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773" />
</androidx.constraintlayout.widget.ConstraintLayout>