<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.perfil.PerfilTrabajadorActivity"
    android:orientation="vertical"
    android:background="@drawable/background3">

    <TextView
        android:id="@+id/titlePerfil"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/title2_perfil"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/title2_perfil"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167" />

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/input_username"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/input_username"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/txtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/input_username"
            android:fontFamily="sans-serif"
            android:paddingStart="8dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/str_correo"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/str_correo"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/input_username"
            android:fontFamily="sans-serif"
            android:paddingStart="8dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnClose"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:contentDescription="@string/str_session"
        android:elevation="10dp"
        android:padding="10dp"
        android:text="@string/str_session"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-smallcaps"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.816"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />
</androidx.constraintlayout.widget.ConstraintLayout>