<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical"
        tools:context=".view.register.RegisterActivity">

        <TextView
            android:id="@+id/title"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/str_create"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/str_create"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.405"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.139" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtUsuario"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_username"
            android:textColorHint="@color/black_light"
            android:elevation="10dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/green_light"
            app:boxStrokeErrorColor="@color/red"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.273"
            app:startIconDrawable="@drawable/icon_person"
            app:startIconTint="@color/black_light">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHighlight="@color/green_light"
                android:textColorHint="@color/grey"
                android:textColorLink="@color/green_light" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtCorreo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_email"
            android:textColorHint="@color/black_light"
            android:elevation="10dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/green_light"
            app:boxStrokeErrorColor="@color/red"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.373"
            app:startIconDrawable="@drawable/icon_email"
            app:startIconTint="@color/black_light">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHighlight="@color/green_light"
                android:textColorHint="@color/grey"
                android:textColorLink="@color/green_light" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_pass"
            android:textColorHint="@color/black_light"
            android:elevation="10dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/green_light"
            app:boxStrokeErrorColor="@color/red"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.473"
            app:startIconDrawable="@drawable/icon_lock"
            app:startIconTint="@color/black_light">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHighlight="@color/green_light"
                android:textColorHint="@color/grey"
                android:textColorLink="@color/green_light" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtConfirm"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_confirm"
            android:textColorHint="@color/black_light"
            android:elevation="10dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/green_light"
            app:boxStrokeErrorColor="@color/red"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.573"
            app:startIconDrawable="@drawable/icon_lock"
            app:startIconTint="@color/black_light">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHighlight="@color/green_light"
                android:textColorHint="@color/grey"
                android:textColorLink="@color/green_light" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnNew"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green_light"
            android:elevation="10dp"
            android:padding="10dp"
            android:text="@string/btn_account"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="20sp"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.673" />

        <TextView
            android:id="@+id/txtSession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_session"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="sans-serif-smallcaps"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>